--- a/pkp-lib/locale/ru_RU/manager.xml
+++ b/pkp-lib/locale/ru_RU/manager.xml
@@ -180,4 +180,6 @@
 	<message key="plugins.categories.metadata">Модули метаданных</message>
 	<message key="plugins.categories.citationParser">Модули экстракции цитат</message>
 	<message key="plugins.categories.citationParser.description">Модули экстракции цитат позволяют получать из оригинальных цитат поля метаданных (например, имя автора, название и т.д.)</message>
+	<message key="plugins.categories.oaiMetadataFormats">Модули Форматов Метаданных OAI</message>
+	<message key="plugins.categories.oaiMetadataFormats.description">Эти модули представляют метеданные при связи с другими архивами.</message>
 </locale>
