--- a/pkp-lib/locale/da_DK/manager.xml
+++ b/pkp-lib/locale/da_DK/manager.xml
@@ -239,4 +239,6 @@
 	<message key="plugins.categories.citationOutput.description">Citation Output Plugins indsætter referencestandarder. Dette erstatter Citation Format Plugins (Plug-ins til citatformater).</message>
 	<message key="plugins.categories.citationParser">Citation Extraction Plugins</message>
 	<message key="plugins.categories.citationParser.description">Citation Extraction Plugins henter data fra ubearbejdede referencer på feltniveau (f.eks. forfatter, titel osv.)</message>
+	<message key="plugins.categories.oaiMetadataFormats">OAI Metadata Format Plugins</message>
+	<message key="plugins.categories.oaiMetadataFormats.description">Disse format-plugins udtrykker metadata i OAI-kommunikationer.</message>
 </locale>
