--- a/pkp-lib/locale/es_ES/manager.xml
+++ b/pkp-lib/locale/es_ES/manager.xml
@@ -216,4 +216,6 @@
 	<message key="manager.setup.filter.parser.grid.title">Servicios de Extracción de Citas</message>
 	<message key="manager.setup.filter.pleaseSelect">Por favor, seleccione...</message>
 	<message key="manager.setup.metaCitationsDescription">Active la siguiente casilla de verificación para habilitar la edición de citas y referencias. Esto permitirá a los autores incluir citas en bruto con los envíos. Los editores también tendrán acceso a un asistente de marcado de citas con el que pueden comprobar las citas originales respecto a las bases de datos externas, tales como WorldCat, ISBNdb, PubMed y otros, para mayor exactitud. Las citas aprobadas se pueden exportar a archivos de galerada final.</message>
+	<message key="plugins.categories.oaiMetadataFormats">Plugins de Formato de Metadatos de OAI</message>
+	<message key="plugins.categories.oaiMetadataFormats.description">Estos plugin de formato expresan metadatos en comunicaciones OAI</message>
 </locale>
