--- a/pkp-lib/locale/nl_NL/manager.xml
+++ b/pkp-lib/locale/nl_NL/manager.xml
@@ -239,4 +239,6 @@
 	<message key="plugins.categories.citationParser">Citatie extractie plugins</message>
 	<message key="plugins.categories.citationParser.description">Citatie extractie plugins extraheren velden uit citaties (auteur, titel, etc).</message>
 	<message key="manager.masthead.title">Redactieteam</message>
+	<message key="plugins.categories.oaiMetadataFormats">OAI Metadata formaat plugins</message>
+	<message key="subscriptions.individualDescription">Bij individuele abonnementen is inloggen nodig om teogang te krijgen tot de inhoud.</message>
 </locale>
