--- a/pkp-lib/locale/sr_SR/manager.xml
+++ b/pkp-lib/locale/sr_SR/manager.xml
@@ -235,4 +235,6 @@
 	<message key="plugins.categories.citationLookup">Dodaci veza baza podataka citata</message>
 	<message key="plugins.categories.citationOutput">Dodaci izlaznog formata citata</message>
 	<message key="plugins.categories.citationParser">Dodaci za ekstrakciju citata</message>
+	<message key="plugins.categories.oaiMetadataFormats">Dodatak OAI formata metapodataka</message>
+	<message key="plugins.categories.oaiMetadataFormats.description">Ovaj dodatak prikazuje metapodatke u formatu OAI komunikacije</message>
 </locale>
