--- a/pkp-lib/locale/tr_TR/manager.xml
+++ b/pkp-lib/locale/tr_TR/manager.xml
@@ -243,4 +243,6 @@
 	<message key="plugins.categories.citationOutput.description">Citation Output Plugins implement citation standards. This supersedes Citation Format Plugins.</message>
 	<message key="plugins.categories.citationParser">Atıf Ayıklama Eklentileri</message>
 	<message key="plugins.categories.citationParser.description">Citation Extraction Plugins extract field-level data from raw citations (e.g. author, title, etc.).</message>
+	<message key="plugins.categories.oaiMetadataFormats">OAI Üst Veri Eklentileri</message>
+	<message key="plugins.categories.oaiMetadataFormats.description">Bu biçim eklentileri OAI iletişiminde hızlı üst veri sağlar.</message>
 </locale>
