--- a/pkp-lib/locale/uk_UA/manager.xml
+++ b/pkp-lib/locale/uk_UA/manager.xml
@@ -241,4 +241,6 @@
 	<message key="manager.emails.enable.message">Ви намагаєтеся включити цей шаблон листа. Ви підтверджуєте цю дію?</message>
 	<message key="manager.masthead.title">Вихідні дані</message>
 	<message key="manager.setup.layout.blockManagement">Налаштування бічних панелей</message>
+       <message key="plugins.categories.oaiMetadataFormats">Модулі форматів метаданих OAI</message>
+       <message key="plugins.categories.oaiMetadataFormats.description">Ці модулі дозволяють генерувати метадані для OAI-комунікації.</message>
 </locale>
