--- a/ojs/locale/en_US/locale.xml
+++ b/ojs/locale/en_US/locale.xml
@@ -960,8 +960,10 @@ current password.<br /><br />Enter your email address below to reset your passwo
 <h4>Supported database systems</h4>
 
 <p>OJS has currently only been tested on MySQL and PostgreSQL, although other database management systems supported by <a href="http://adodb.sourceforge.net/" target="_blank">ADOdb</a> may work (in full or partially). Compatibility reports and/or code patches for alternative DBMSs can be sent to the OJS team.</p>
-
+]]></message>
+<message key="installer.preInstallationInstructions"><![CDATA[
 <h4>Pre-Installation Steps</h4>
+
 
 <p>1. The following files and directories (and their contents) must be made writable:</p>
 <ul>
