--- a/pkp-lib/locale/es_ES/common.xml
+++ b/pkp-lib/locale/es_ES/common.xml
@@ -257,9 +257,9 @@
 	<message key="search.matchAll">Coincidencia en todas las categorías</message>
 	<message key="search.noKeywordError">Debe introducir al menos un término de búsqueda.</message>
 	<message key="search.noResults">No hay resultados</message>
-	<message key="search.operator.and">y</message>
-	<message key="search.operator.not">no</message>
-	<message key="search.operator.or">o</message>
+	<message key="search.operator.and">and</message>
+	<message key="search.operator.not">not</message>
+	<message key="search.operator.or">or</message>
 	<message key="search.reviseSearch">Revisar búsqueda</message>
 	<message key="search.searchAllCategories">Buscar en todas las categorías</message>
 	<message key="search.searchCategories">Buscar categorías</message>
