--- a/ops/plugins/generic/lucene/locale/en_US/locale.xml
+++ b/ops/plugins/generic/lucene/locale/en_US/locale.xml
@@ -67,6 +67,7 @@
 	<message key="plugins.generic.lucene.settings.featureDescription"><![CDATA[
 		The Lucene plugin provides several optional search features. These features are enabled by default but can be disabled and fine-tuned.
 	]]></message>
+	<message key="plugins.generic.lucene.settings.highlighting">Display a short excerpt of each article's full text containing queried keywords.</message>
 	<message key="plugins.generic.lucene.settings.instId">Unique Installation ID</message>
 	<message key="plugins.generic.lucene.settings.instIdRequired">Please enter an ID that uniquely identifies this OJS installation to the Solr search server.</message>
 	<message key="plugins.generic.lucene.settings.instIdInstructions">If you use a central search server then you'll have to provide a unique installation ID for every OJS installation sharing the same search index.  This can be any arbitrary text but it must be different for every participating OJS server (e.g. the server's static IP address if you have one OJS installation per server).</message>
